# page_analyzer

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: python-app.yml
page_analyzer/: __init__.py  app.py  db.py  parser.py  utils.py
page_analyzer/templates/pages/: error.html  index.html  url.html  urls.html
